# MLP

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  controller.h  docs.tex  main.cc  signal_handler.h
src/main/: MLP.pro  controller.h  main.cc  signal_handler.h
src/main/model/: config.cc  config.h  letter.cc  letter.h  metrics.cc  metrics.h  model.cc  model.h  neural_network.cc  neural_network.h  virtual_mlp.h
src/main/model/graph-mlp/: graph_mlp.cc  graph_mlp.h  layer.cc  layer.h  neuron.cc  neuron.h
src/main/model/matrix-mlp/: matrix.cc  matrix.h  matrix_mlp.cc  matrix_mlp.h
src/main/view/: main_form.cc  main_form.h  main_form.ui  scribble_widget.cc  scribble_widget.h
src/model/: config.cc  config.h  letter.cc  letter.h  metrics.cc  metrics.h  model.cc  model.h  neural_network.cc  neural_network.h  virtual_mlp.h
src/model/graph-mlp/: graph_mlp.cc  graph_mlp.h  layer.cc  layer.h  neuron.cc  neuron.h
src/model/matrix-mlp/: matrix.cc  matrix.h  matrix_mlp.cc  matrix_mlp.h
src/shared/: CMakeLists.txt
src/tests/: matrix_mlp_tests.cc  mlp_tests.cc  utils.cc  utils.h
src/unit-tests/: Makefile  graph_mlp_tests.cc  matrix_mlp_tests.cc  utils.cc  utils.h  weights.txt
src/view/: main_form.cc  main_form.h  main_form.ui  scribble_widget.cc  scribble_widget.h
src/weights/: weights_2.txt  weights_3.txt
weights/: weights_4.txt  weights_5.txt
